--- a/vignettes/FlowSorted.Blood.450k.bib
+++ b/vignettes/FlowSorted.Blood.450k.bib
@@ -1,32 +1,41 @@
-@article{reinius2012,
-  title={Differential DNA methylation in purified human blood cells: implications for cell lineage and studies on disease susceptibility},
-  author={Reinius, Lovisa E and Acevedo, Nathalie and Joerink, Maaike and Pershagen, G{\"o}ran and Dahl{\'e}n, Sven-Erik and Greco, Dario and S{\"o}derh{\"a}ll, Cilla and Scheynius, Annika and Kere, Juha},
-  journal={PLoS One},
-  volume={7},
-  number={7},
-  pages={e41361},
-  year={2012},
-  publisher={Public Library of Science}
+@article{reinius:2012,
+  author =	 {Reinius, Lovisa E and Acevedo, Nathalie and Joerink, Maaike and Pershagen,
+                  G{\"o}ran and Dahl{\'e}n, Sven-Erik and Greco, Dario and S{\"o}derh{\"a}ll, Cilla
+                  and Scheynius, Annika and Kere, Juha},
+  title =	 {{Differential DNA Methylation in Purified Human Blood Cells: Implications for Cell
+                  Lineage and Studies on Disease Susceptibility}},
+  journal =	 {PloS One},
+  year =	 {2012},
+  volume =	 {7},
+  number =	 {7},
+  pages =	 {e41361},
+  doi =		 {10.1371/journal.pone.0041361},
+  pubmed =	 {22848472}
 }
 
-@article{gagnon2012,
-  title={Using control genes to correct for unwanted variation in microarray data},
-  author={Gagnon-Bartsch, Johann A and Speed, Terence P},
-  journal={Biostatistics},
-  volume={13},
-  number={3},
-  pages={539--552},
-  year={2012},
-  publisher={Biometrika Trust}
+@article{gagnon:2012,
+  author =	 {Gagnon-Bartsch, J A and Speed, T P},
+  title =	 {{Using control genes to correct for unwanted variation in microarray data}},
+  journal =	 {Biostatistics},
+  year =	 {2012},
+  volume =	 {13},
+  number =	 {3},
+  pages =	 {539--552},
+  doi =		 {10.1093/biostatistics/kxr034},
+  pubmed =	 {22101192},
 }
 
-@article{houseman2012,
-  title={DNA methylation arrays as surrogate measures of cell mixture distribution},
-  author={Houseman, Eugene A and Accomando, William P and Koestler, Devin C and Christensen, Brock C and Marsit, Carmen J and Nelson, Heather H and Wiencke, John K and Kelsey, Karl T},
-  journal={BMC bioinformatics},
-  volume={13},
-  number={1},
-  pages={86},
-  year={2012},
-  publisher={BioMed Central Ltd}
+@article{houseman:2012,
+  author =	 {Houseman, E Andres and Accomando, William P and Koestler, Devin C and Christensen,
+                  Brock C and Marsit, Carmen J and Nelson, Heather H and Wiencke, John K and Kelsey,
+                  Karl T},
+  title =	 {{DNA methylation arrays as surrogate measures of cell mixture distribution}},
+  journal =	 {BMC Bioinformatics},
+  year =	 {2012},
+  volume =	 {13},
+  number =	 {1},
+  pages =	 {86},
+  doi =		 {10.1186/1471-2105-13-86},
+  pubmed =	 {22568884}
 }
+
