--- a/vignettes/FlowSorted.Blood.450k.Rnw
+++ b/vignettes/FlowSorted.Blood.450k.Rnw
@@ -34,9 +34,9 @@ options(width=70)
 
 The \Rpackage{FlowSorted.Blood.450k} package contains publicly available Illumina
 HumanMethylation450 (``450k'') DNA methylation microarray data from a recent publication by Reinius
-et al. 2012 \cite{reinius:2012}, consisting of 60 samples, formatted as an \Rcode{RGset} object for
-easy integration and normalization using existing Bioconductor packages (the code for creating the R
-object from the raw \texttt{.idat} files is provided in the package as well at
+et al. 2012 \cite{reinius:2012}, consisting of 60 samples, formatted as an \Rcode{RGChannelSet}
+object for easy integration and normalization using existing Bioconductor packages (the code for
+creating the R object from the raw \texttt{.idat} files is provided in the package as well at
 \texttt{inst/scripts/getKereData.R}). For example, this dataset may be useful as example data for
 other packages exploring, normalizing, or analyzing DNA methylation data.
 
